--- a/app/src/main/res/layout/activity_specs.xml
+++ b/app/src/main/res/layout/activity_specs.xml
@@ -26,7 +26,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/prep_nachal"
+        android:id="@+id/btn0"
         android:layout_width="0dp"
         android:layout_height="59dp"
         android:layout_marginStart="20dp"
@@ -58,7 +58,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/prep_nachal" />
+        app:layout_constraintTop_toBottomOf="@+id/btn0" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/music_obraz"
