--- a/app/src/main/res/layout/activity_selected_group451.xml
+++ b/app/src/main/res/layout/activity_selected_group451.xml
@@ -5,81 +5,76 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GroupsActivity"
-    android:background="#CFCFCF">
+    tools:context=".SelectedGroupActivity451">
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn0"
+        android:id="@+id/all_group"
         android:layout_width="0dp"
         android:layout_height="59dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/btn_style"
-        android:text="151"
+        android:text="Вся группа"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        android:textSize="15sp"
+        android:textSize="20sp"
         android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn2"
-        android:layout_width="0dp"
-        android:layout_height="59dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/btn_style"
-        android:text="152"
-        android:textAllCaps="false"
-        android:textColor="#FFFFFF"
-        android:textSize="15sp"
-        android:textStyle="normal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn3"
+        android:id="@+id/siroti_group"
         android:layout_width="0dp"
         android:layout_height="59dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="204dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/btn_style"
-        android:text="251"
+        android:text="Студенты сироты"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        android:textSize="15sp"
+        android:textSize="20sp"
         android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn4"
+        android:id="@+id/family_group"
         android:layout_width="0dp"
         android:layout_height="59dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="168dp"
+        android:layout_marginTop="296dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/btn_style"
-        android:text="351"
+        android:text="Студенты неполной семьи"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        android:textSize="15sp"
+        android:textSize="20sp"
         android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn5"
+        android:id="@+id/disability_group"
         android:layout_width="0dp"
         android:layout_height="59dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="112dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/btn_style"
-        android:text="451"
+        android:text="Студенты инвалиды или ОВЗ"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        android:textSize="15sp"
+        android:textSize="20sp"
         android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -87,28 +82,12 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="20dp"
-        android:text="Выберите необходимую группу"
+        android:text="Выбранная группа: 451"
         android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button2"
-        android:layout_width="0dp"
-        android:layout_height="78dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/group_name_style"
-        android:text="Программирование в компьютерных системах"
-        android:textAllCaps="false"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
