--- a/app/src/main/res/layout/activity_selected_group451.xml
+++ b/app/src/main/res/layout/activity_selected_group451.xml
@@ -43,6 +43,24 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/svo_group"
+        android:layout_width="0dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="384dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/btn_style"
+        android:text="Родители участники СВО"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/family_group"
         android:layout_width="0dp"
         android:layout_height="59dp"
