--- a/app/src/main/res/layout/activity_selected_group451.xml
+++ b/app/src/main/res/layout/activity_selected_group451.xml
@@ -5,7 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SelectedGroupActivity451">
+    tools:context=".SelectedGroupActivity451"
+    android:background="#CFCFCF">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/all_group"
